<resources>
    <string name="app_name">geoquiz</string>
    <!--QUESTIONS-->
    <string name="questionOceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="questionMideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="questionAfrica">The source of the Nile River is in Egypt.</string>
    <string name="questionAmericas">The Amazon River is the longest river in the Americas.</string>
    <string name="questionAsia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <!--CONTROLS-->
    <string name="btnTrue">True</string>
    <string name="btnFalse">False</string>
    <string name="btnPrev">Prev</string>
    <string name="btnNext">Next</string>
    <string name="btnCheat">Cheat!</string>
    <string name="btnShowAnswer">Show Answer</string>
    <string name="txtWarning">Are you sure you want to do this?</string>
    <!--TOASTS-->
    <string name="correctToast">Correct!</string>
    <string name="incorrectToast">Incorrect!</string>
    <string name="judgmentToast">Cheating is wrong.</string>
</resources>